<resources>

    <!-- App -->
    <string name="app_name">АГНКС</string>

    <!-- BaseActivity -->

    <!-- TestActivity -->
    <string name="str_make_discoverable">Сделать доступным для поиска</string>
    <string name="str_discover_devices">Найти устройства</string>
    <string name="str_stop_discover_devices">Остановить поиск</string>
    <string name="str_prompt_enter_message">Текст сообщения:</string>
    <string name="str_data">(разделитель чисел - пробел):</string>
    <string name="str_setup_connect">Установить соединение</string>
    <string name="str_stop_check_connect">Остановить проверку</string>
    <string name="str_check_connect">Проверить соединение</string>
    <string name="str_close_connect">Закрыть соединение</string>
    <string name="str_send_message">Отправить сообщение</string>
    <string name="str_send_command">Отправить</string>
    <string name="str_send_test_message">Отправить тестовую команду</string>
    <string name="str_message_for_device">Текст сообщения</string>
    <string name="str_data_hint">Введите данные</string>
    <string name="str_message_received">Полученное сообщение</string>

    <!-- AboutActivity -->

    <!-- Menu -->
    <string name="action_devices_manage">Управление устройствами</string>
    <string name="action_manage_devices">Управление устройствами</string>
    <string name="action_progr_device">Программирование устройства</string>
    <string name="action_progr_devices_group">Программирование группы устройств</string>
    <string name="action_progr_devices_group2">Прогр. группы (без проверки соед.)</string>
    <string name="action_edit_device">Редактирование устройства</string>
    <string name="action_settings">Настройки</string>
    <string name="action_about">О программе</string>
    <string name="action_logs">Логи</string>
    <string name="action_test">Bluetooth тест</string>

    <!-- Other -->
    <string name="str_list_empty">Устройства отсутствуют</string>

    <string name="str_add_value">Добавить</string>
    <string name="str_apply">Применить</string>
    <string name="str_cancel">Отмена</string>
    <string name="str_no">Нет</string>
    <string name="str_yes">Да</string>
    <string name="str_select">Выбрать</string>
    <string name="str_ok">OK</string>
    <string name="action_edit">Изменить</string>
    <string name="action_delete">Удалить</string>
    <string name="action_prog">Программировать</string>
    <string name="str_no_devices">Устройства отсутствуют</string>
    <string name="str_unknown_device">Неизвестное устройство</string>
    <string name="str_unknown_mac_address">0000</string>
    <string name="str_main_window">Главное окно</string>
    <string name="str_bluetooth_device_name">Имя Bluetooth-адаптера:</string>
    <string name="str_mac_address">Mac-адресс:</string>
    <string name="str_device_custom_name">Пользовательское имя устройства:</string>
    <string name="str_connection_is_established">Соединение устанавливается..</string>
    <string name="pref_key_number">pref_number</string>
    <string name="pref_key_log_last_lines">pref_log_last_lines</string>
    <string name="pref_key_is_need_log">pref_is_need_log</string>
    <string name="pref_key_log_max_size">pref_log_max_size</string>
    <string name="pref_key_clear_log">pref_clear_log</string>
    <string name="pref_key_user_pass">pref_key_user_pass</string>
    <string name="pref_key_admin_pass">pref_key_admin_pass</string>
    <string name="pref_key_category_access">pref_key_category_access</string>
    <string name="pref_key_category_log">pref_key_category_log</string>
    <string name="pref_key_screen_log">pref_key_screen_log</string>
    <string name="pref_key_screen_access">pref_key_screen_access</string>
    <string name="pref_key_is_need_bt_auto_enable">pref_key_is_need_bt_auto_enable</string>
    <string name="pref_key_max_timeout">pref_key_max_timeout</string>

</resources>