<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_bluetooth_device_name" />

    <EditText
        android:id="@+id/edittext_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:enabled="false"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_mac_address" />

    <EditText
        android:id="@+id/edittext_mac_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:enabled="false"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_device_custom_name" />

    <EditText
        android:id="@+id/edittext_custom_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="apply"
            android:text="@string/str_apply" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/str_cancel" />

    </LinearLayout>
</LinearLayout>
