<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true" 
        android:focusableInTouchMode="true" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="makeDiscoverable"
            android:text="@string/str_make_discoverable" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Без сопряжения"
            android:checked="true"
            android:onClick="onSecureChange"
            android:id="@+id/checkBox" />

        <Button
            android:id="@+id/discovery_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="discoverDevices"
            android:text="@string/str_discover_devices" />

        <!--<TextView-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/title_tap_to_connect" />-->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            style="@android:style/Widget.ProgressBar.Large">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_centerInParent="true"
                android:visibility="invisible"/>

            <ListView
                android:id="@android:id/list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="sendTestMessage"
            android:text="@string/str_send_test_message" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_prompt_enter_message" />

        <EditText
            android:id="@+id/message_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_message_for_device" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/str_send_message" />

        <TextView
            android:id="@+id/data_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>