<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_check_connection"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="checkConnect"
            android:text="@string/str_check_connect" />

        <TextView
            android:id="@+id/textview_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="horizontal">-->
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio_dec"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="dec"/>
                <RadioButton
                    android:id="@+id/radio_hex"
                    android:enabled="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="hex"/>
            </RadioGroup>
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="5dp"-->
                <!--android:text="@string/str_data" />-->

        <!--</LinearLayout>-->


        <EditText
            android:id="@+id/message_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_margin="5dp"
            android:gravity="top|left"
            android:hint="@string/str_data_hint"
            android:digits="0123456789ABCDEFabcdef "
            android:inputType="textCapCharacters"
            android:lines="2" />

        <Button
            android:id="@+id/button_send_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:enabled="false"
            android:onClick="sendMessage"
            android:text="@string/str_send_command" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/data_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>
